添加其他任务

--- a/An/app/templates/add_other_jobs.html
+++ b/An/app/templates/add_other_jobs.html
@@ -172,7 +172,7 @@
             </div>
         </div>
         <!--/span-->
-        <!-- left menu ends -->
+        <!-- left menu end -->
 
         <noscript>
             <div class="alert alert-block col-md-12">
