--- a/An/app/templates/base.html
+++ b/An/app/templates/base.html
@@ -5,7 +5,7 @@
         ===
         This comment should NOT be removed.
 
-        Charisma v2.0.0
+        Charsma v2.0.0
 
         Copyright 2012-2014 Muhammad Usman
         Licensed under the Apache License v2.0
