--- a/An/app/templates/pwd.html
+++ b/An/app/templates/pwd.html
@@ -4,7 +4,7 @@
 <head>
     <!--
         ===
-        This comment should NOT be removed.
+        This commet should NOT be removed.
 
         Charisma v2.0.0
 
