--- a/An/app/templates/login.html
+++ b/An/app/templates/login.html
@@ -3,7 +3,7 @@
 <head>
     <!--
         ===
-        This comment should NOT be removed.
+        This comment shuld NOT be removed.
 
         Charisma v2.0.0
 
