--- a/An/app/templates/jobs_list.html
+++ b/An/app/templates/jobs_list.html
@@ -4,7 +4,7 @@
 <head>
     <!--
         ===
-        This comment should NOT be removed.
+        This coment should NOT be removed.
 
         Charisma v2.0.0
 
