--- a/An/app/templates/host_view.html
+++ b/An/app/templates/host_view.html
@@ -18,7 +18,7 @@
          </div>
      </div>
      <!--/span-->
-     <!--/span-->
+     <!--/san-->
      <div class="box col-md-4">
          <div class="box-inner">
              <div class="box-header well" data-original-title="">
