--- a/An/app/templates/host_addsshk.html
+++ b/An/app/templates/host_addsshk.html
@@ -40,7 +40,7 @@
 							<input class="form-control" id="remote_user" name="remote_user" type="text" value="root">
 						</div>
 						
-						<!--remote pass-->
+						<!--remte pass-->
 						
 						<div class="input-group col-md-4">
 							<label class="control-label" for="remote_pass">Remote Password</label>
