--- a/An/app/templates/base.html
+++ b/An/app/templates/base.html
@@ -167,8 +167,8 @@
                         <li class="accordion">
 							<a href="#"><i class="glyphicon glyphicon-plus"></i><span>Add Job</span></a>
                             <ul class="nav nav-pills nav-stacked">
-								<li><a href="#"> General</a></li>
-								<li><a href="#">Other</a></li>
+								<li><a href="{{ url_for('admin.job_general') }}"> General</a></li>
+								<li><a href="{{ url_for('admin.job_other') }}">Other</a></li>
 								</li>
                             </ul>
                         </li>
