--- a/An/app/templates/host_addsshk.html
+++ b/An/app/templates/host_addsshk.html
@@ -26,29 +26,47 @@
                 </div>
             </div>
             <div class="box-content">
-				<form role="form" method="post" action=/hosts/host/zhang/add_sshkey>
-					<input id="csrf_token" name="csrf_token" type="hidden" value="IjM1ODEwMWJlNTM2NDE3YzRlNDNjNWEyYzU5ZDE4NTcwMjU4NjFjOTQi.DOW9dg.LBzcnH8fc-Y0qY3-EcJxzVhmkI0">
+				<form role="form" method="post" >
 						<!--alias-->
 						<div class="input-group col-md-4">
-							<label class="control-label" for="alias">Alias</label>
-							<input class="form-control" id="alias" name="alias" readonly="true" type="text" value="zhang">
+							<label class="control-label" for="alias">{{ form.alias.label }}</label>
+							{{ form.alias(value=host.alias) }}
+							{% for err in form.alias.errors %}
+							<div class="alert alert-danger">
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+							<strong>Oh snap!</strong> {{ err }}
+							</div>
+							{% endfor %}
 						</div>
 						<!--remote_user-->
 						
 						<div class="input-group col-md-4">
-							<label class="control-label" for="remote_user">Remote User</label>
-							<input class="form-control" id="remote_user" name="remote_user" type="text" value="root">
+							<label class="control-label" for="remote_user">{{ form.remote_user.label }}</label>
+							{{ form.remote_user(value=host.remote_user) }}
+							{% for err in form.remote_user.errors %}
+							<div class="alert alert-danger">
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+							<strong>Oh snap!</strong> {{ err }}
+							</div>
+							{% endfor %}
 						</div>
 						
 						<!--remte pass-->
 						
 						<div class="input-group col-md-4">
-							<label class="control-label" for="remote_pass">Remote Password</label>
-							<input class="form-control" id="remote_pass" name="remote_pass" type="password" value="">
+							<label class="control-label" for="remote_pass">{{ form.remote_password.label }}</label>
+							{{ form.remote_password }}
+							{% for err in form.remote_password.errors %}
+							<div class="alert alert-danger">
+							<button type="button" class="close" data-dismiss="alert">&times;</button>
+							<strong>Oh snap!</strong> {{ err }}
+							</div>
+							{% endfor %}
 						</div>
 						
 					</br>
-                    <button type="submit" class="btn btn-default">Submit</button>
+                    {{ form.submit }}
+                    {{ form.csrf_token }}
                 </form>
 
             </div>
