--- a/An/app/templates/host_list.html
+++ b/An/app/templates/host_list.html
@@ -58,7 +58,7 @@
                 <i class="glyphicon glyphicon-zoom-in icon-white"></i>
                 Edit
             </a>
-			<a class="btn btn-info" href=/hosts/host/zhang/add_sshkey>
+			<a class="btn btn-info" href="{{ url_for('admin.add_sshkey',id=v.id) }}">
                 <i class="glyphicon glyphicon-zoom-in icon-white"></i>
                 SSHKey
             </a>
