--- a/An/app/templates/base.html
+++ b/An/app/templates/base.html
@@ -162,7 +162,7 @@
                         </li>			
 									
                         <li class="nav-header hidden-md">Job Section</li>
-						<li><a class="ajax-link" href="#"><i
+						<li><a class="ajax-link" href="{{ url_for('admin.job_list',page=1) }}""><i
                                     class="glyphicon glyphicon-align-justify"></i><span> Jobs</span></a></li>
                         <li class="accordion">
 							<a href="#"><i class="glyphicon glyphicon-plus"></i><span>Add Job</span></a>
